Fix input box sizes and overlapping on other browsers than Chrome / Windows.

--- a/src/App.css
+++ b/src/App.css
@@ -47,6 +47,7 @@ div.userCreate {
 input.userCreateInput {
   background-color: #fafafa;
   border: 1px solid #eeeeee;
+  height: 40px;
   line-height: 40px;
   margin-right: 16px;
   padding-left: 10px;
@@ -65,7 +66,7 @@ input.userCreateInputPhone {
 } 
 
 input.userCreateInputSubmit {
-  width: 110px;
+  width: 107px;
   margin-left: 86px;
   margin-right: 0px;
   color: #757575;
@@ -83,6 +84,7 @@ input.userEditInput {
   display: inline-block;
   background-color: #fafafa;
   border: 1px solid #eeeeee;
+  height: 40px;
   line-height: 40px;
   padding-left: 10px;
   font-size: 16px;
